mensajeria-qa/endpoints.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-22T19:39:05Z"
    labels:
      app: laboralprevisional
      migration.openshift.io/migrated-by-migmigration: 465f3a37-eb75-4e9e-bc67-35796c567b7c
      migration.openshift.io/migrated-by-migplan: 1ab7d19c-1b63-4fd8-8e50-983c4958473a
      velero.io/backup-name: migration-4180a-initial-6br59
      velero.io/restore-name: migration-4180a-final-6kqlt
    name: laboralprevisional
    namespace: mensajeria-qa
    resourceVersion: "9200600"
    uid: 099a3295-e275-41f7-8141-d4b853033df5
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-22T19:39:05Z"
    labels:
      app: laboralprevisionalbck-qa
      migration.openshift.io/migrated-by-migmigration: 465f3a37-eb75-4e9e-bc67-35796c567b7c
      migration.openshift.io/migrated-by-migplan: 1ab7d19c-1b63-4fd8-8e50-983c4958473a
      velero.io/backup-name: migration-4180a-initial-6br59
      velero.io/restore-name: migration-4180a-final-6kqlt
    name: laboralprevisionalbck-qa
    namespace: mensajeria-qa
    resourceVersion: "9200602"
    uid: d6f54971-3cfc-43a8-b0ff-574631636d73
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-22T19:39:05Z"
    labels:
      app: laboralprevisionalbckgrd
      migration.openshift.io/migrated-by-migmigration: 465f3a37-eb75-4e9e-bc67-35796c567b7c
      migration.openshift.io/migrated-by-migplan: 1ab7d19c-1b63-4fd8-8e50-983c4958473a
      velero.io/backup-name: migration-4180a-initial-6br59
      velero.io/restore-name: migration-4180a-final-6kqlt
    name: laboralprevisionalbckgrd
    namespace: mensajeria-qa
    resourceVersion: "9200603"
    uid: 52e1b1b2-4e80-4cc1-89d8-7e4d340d2c60
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-22T19:39:05Z"
    labels:
      app: labprev-cumplimiento
      migration.openshift.io/migrated-by-migmigration: 465f3a37-eb75-4e9e-bc67-35796c567b7c
      migration.openshift.io/migrated-by-migplan: 1ab7d19c-1b63-4fd8-8e50-983c4958473a
      velero.io/backup-name: migration-4180a-initial-6br59
      velero.io/restore-name: migration-4180a-final-6kqlt
    name: labprev-cumplimiento
    namespace: mensajeria-qa
    resourceVersion: "9200604"
    uid: d946beb5-4509-4941-86e9-5d91c52f9303
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
