mensajeria-qa/endpointslices.discovery.k8s.io.yaml
apiVersion: v1
items:
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints: null
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-22T19:39:06Z"
    generateName: laboralprevisional-
    generation: 1
    labels:
      app: laboralprevisional
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: laboralprevisional
      migration.openshift.io/migrated-by-migmigration: 465f3a37-eb75-4e9e-bc67-35796c567b7c
      migration.openshift.io/migrated-by-migplan: 1ab7d19c-1b63-4fd8-8e50-983c4958473a
      velero.io/backup-name: migration-4180a-initial-6br59
      velero.io/restore-name: migration-4180a-final-6kqlt
    name: laboralprevisional-67w2z
    namespace: mensajeria-qa
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: laboralprevisional
      uid: 07d48f4c-0613-4f42-b06f-e1df6f349c92
    resourceVersion: "476054087"
    uid: 08c8f179-fa1e-4d2f-a0fa-a5de58b87795
  ports: null
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints: null
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-22T19:39:06Z"
    generateName: laboralprevisionalbck-qa-
    generation: 1
    labels:
      app: laboralprevisionalbck-qa
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: laboralprevisionalbck-qa
      migration.openshift.io/migrated-by-migmigration: 465f3a37-eb75-4e9e-bc67-35796c567b7c
      migration.openshift.io/migrated-by-migplan: 1ab7d19c-1b63-4fd8-8e50-983c4958473a
      velero.io/backup-name: migration-4180a-initial-6br59
      velero.io/restore-name: migration-4180a-final-6kqlt
    name: laboralprevisionalbck-qa-jg8lf
    namespace: mensajeria-qa
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: laboralprevisionalbck-qa
      uid: de1d4f16-d6e9-43f3-8268-5c56d3b6b98d
    resourceVersion: "476054064"
    uid: 4f101af3-0add-41ab-91f9-53f9e62c55fb
  ports: null
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints: null
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-22T19:39:06Z"
    generateName: laboralprevisionalbckgrd-
    generation: 1
    labels:
      app: laboralprevisionalbckgrd
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: laboralprevisionalbckgrd
      migration.openshift.io/migrated-by-migmigration: 465f3a37-eb75-4e9e-bc67-35796c567b7c
      migration.openshift.io/migrated-by-migplan: 1ab7d19c-1b63-4fd8-8e50-983c4958473a
      velero.io/backup-name: migration-4180a-initial-6br59
      velero.io/restore-name: migration-4180a-final-6kqlt
    name: laboralprevisionalbckgrd-q654n
    namespace: mensajeria-qa
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: laboralprevisionalbckgrd
      uid: 139538f8-9498-40d8-8f68-99382e1dcae4
    resourceVersion: "476066963"
    uid: f781df00-e00e-49af-9281-145a712cfb91
  ports: null
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints: null
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-22T19:39:06Z"
    generateName: labprev-cumplimiento-
    generation: 1
    labels:
      app: labprev-cumplimiento
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: labprev-cumplimiento
      migration.openshift.io/migrated-by-migmigration: 465f3a37-eb75-4e9e-bc67-35796c567b7c
      migration.openshift.io/migrated-by-migplan: 1ab7d19c-1b63-4fd8-8e50-983c4958473a
      velero.io/backup-name: migration-4180a-initial-6br59
      velero.io/restore-name: migration-4180a-final-6kqlt
    name: labprev-cumplimiento-njrfp
    namespace: mensajeria-qa
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: labprev-cumplimiento
      uid: f2ecb250-af6f-49f2-8a03-b3f68807792d
    resourceVersion: "476054016"
    uid: 560376ad-42a7-48d8-9c6d-5b2c645e5935
  ports: null
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
