mensajeria-qa/routes.route.openshift.io.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-05-22T19:39:06Z"
    labels:
      app: laboralprevisional
      migration.openshift.io/migrated-by-migmigration: 465f3a37-eb75-4e9e-bc67-35796c567b7c
      migration.openshift.io/migrated-by-migplan: 1ab7d19c-1b63-4fd8-8e50-983c4958473a
      velero.io/backup-name: migration-4180a-initial-6br59
      velero.io/restore-name: migration-4180a-final-6kqlt
    name: laboralprevisional
    namespace: mensajeria-qa
    resourceVersion: "9200635"
    uid: 6d3dc34f-0498-4a25-aec0-f33e2529fb21
  spec:
    host: laboralprevisional-mensajeria-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: laboralprevisional
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-22T19:39:06Z"
        status: "True"
        type: Admitted
      host: laboralprevisional-mensajeria-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-05-22T19:39:06Z"
    labels:
      app: laboralprevisionalbck-qa
      migration.openshift.io/migrated-by-migmigration: 465f3a37-eb75-4e9e-bc67-35796c567b7c
      migration.openshift.io/migrated-by-migplan: 1ab7d19c-1b63-4fd8-8e50-983c4958473a
      velero.io/backup-name: migration-4180a-initial-6br59
      velero.io/restore-name: migration-4180a-final-6kqlt
    name: laboralprevisionalbck
    namespace: mensajeria-qa
    resourceVersion: "9200637"
    uid: 3024beec-49ab-4eb0-89f9-1f2e8f2113b6
  spec:
    host: laboralprevisionalbck-qa-mensajeria.api.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: laboralprevisionalbck-qa
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-22T19:39:06Z"
        status: "True"
        type: Admitted
      host: laboralprevisionalbck-qa-mensajeria.api.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-05-22T19:39:06Z"
    labels:
      app: labprev-cumplimiento
      migration.openshift.io/migrated-by-migmigration: 465f3a37-eb75-4e9e-bc67-35796c567b7c
      migration.openshift.io/migrated-by-migplan: 1ab7d19c-1b63-4fd8-8e50-983c4958473a
      velero.io/backup-name: migration-4180a-initial-6br59
      velero.io/restore-name: migration-4180a-final-6kqlt
    name: labprev-cumplimiento
    namespace: mensajeria-qa
    resourceVersion: "9200639"
    uid: 1329aa61-f293-42eb-bc84-9552d4af7d40
  spec:
    host: labprev-cumplimiento-mensajeria-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: labprev-cumplimiento
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-22T19:39:06Z"
        status: "True"
        type: Admitted
      host: labprev-cumplimiento-mensajeria-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
