mensajeria-qa/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-22T19:39:06Z"
    labels:
      app: laboralprevisional
      migration.openshift.io/migrated-by-migmigration: 465f3a37-eb75-4e9e-bc67-35796c567b7c
      migration.openshift.io/migrated-by-migplan: 1ab7d19c-1b63-4fd8-8e50-983c4958473a
      velero.io/backup-name: migration-4180a-initial-6br59
      velero.io/restore-name: migration-4180a-final-6kqlt
    name: laboralprevisional
    namespace: mensajeria-qa
    resourceVersion: "9200642"
    uid: 07d48f4c-0613-4f42-b06f-e1df6f349c92
  spec:
    clusterIP: 172.30.198.60
    clusterIPs:
    - 172.30.198.60
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: laboralprevisional
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-22T19:39:06Z"
    labels:
      app: laboralprevisionalbck-qa
      migration.openshift.io/migrated-by-migmigration: 465f3a37-eb75-4e9e-bc67-35796c567b7c
      migration.openshift.io/migrated-by-migplan: 1ab7d19c-1b63-4fd8-8e50-983c4958473a
      velero.io/backup-name: migration-4180a-initial-6br59
      velero.io/restore-name: migration-4180a-final-6kqlt
    name: laboralprevisionalbck-qa
    namespace: mensajeria-qa
    resourceVersion: "9200650"
    uid: de1d4f16-d6e9-43f3-8268-5c56d3b6b98d
  spec:
    clusterIP: 172.30.53.59
    clusterIPs:
    - 172.30.53.59
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: laboralprevisionalbck-qa
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-22T19:39:06Z"
    labels:
      app: laboralprevisionalbckgrd
      migration.openshift.io/migrated-by-migmigration: 465f3a37-eb75-4e9e-bc67-35796c567b7c
      migration.openshift.io/migrated-by-migplan: 1ab7d19c-1b63-4fd8-8e50-983c4958473a
      velero.io/backup-name: migration-4180a-initial-6br59
      velero.io/restore-name: migration-4180a-final-6kqlt
    name: laboralprevisionalbckgrd
    namespace: mensajeria-qa
    resourceVersion: "9200657"
    uid: 139538f8-9498-40d8-8f68-99382e1dcae4
  spec:
    clusterIP: 172.30.216.58
    clusterIPs:
    - 172.30.216.58
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: laboralprevisionalbckgrd
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-22T19:39:06Z"
    labels:
      app: labprev-cumplimiento
      migration.openshift.io/migrated-by-migmigration: 465f3a37-eb75-4e9e-bc67-35796c567b7c
      migration.openshift.io/migrated-by-migplan: 1ab7d19c-1b63-4fd8-8e50-983c4958473a
      velero.io/backup-name: migration-4180a-initial-6br59
      velero.io/restore-name: migration-4180a-final-6kqlt
    name: labprev-cumplimiento
    namespace: mensajeria-qa
    resourceVersion: "9200662"
    uid: f2ecb250-af6f-49f2-8a03-b3f68807792d
  spec:
    clusterIP: 172.30.147.70
    clusterIPs:
    - 172.30.147.70
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: labprev-cumplimiento
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
